--- a/app/src/main/res/layout/fragment_detail_post.xml
+++ b/app/src/main/res/layout/fragment_detail_post.xml
@@ -27,11 +27,12 @@
 
             <TextView
                 android:id="@+id/txt_detail_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@{postViewModel.getSelectedPost().title}"
-                android:textSize="30sp"
+                android:textAlignment="center"
                 android:textColor="#fff"
+                android:textSize="30sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline17"
                 app:layout_constraintStart_toStartOf="@+id/guideline16"
                 app:layout_constraintTop_toTopOf="@+id/guideline18"
